Update Search by hashtags and title

--- a/photo_and_register/views/search.ejs
+++ b/photo_and_register/views/search.ejs
@@ -47,7 +47,7 @@
 
     <!-- Search form -->
     <form method="GET" action="/search">
-        <input type="text" name="search" placeholder="사진 이름 검색..." value="<%= searchQuery %>">
+        <input type="text" name="search" placeholder="사진 이름 또는 해시태그 검색..." value="<%= searchQuery %>">
         <button type="submit">검색</button>
     </form>
 
